<resources>
    <string name="app_name">天天夺宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">首页</string>
    <string name="main_nine">9块9</string>
    <string name="main_lowprice">最新揭晓</string>
    <string name="main_classify">分类</string>
    <string name="main_buy">清单</string>
    <string name="main_my">我的</string>
    <string name="rmb_yuan">¥</string>
    <string name="limited_home">限时限量  真实底价</string>
    <string name="search_bt">搜索感兴趣的商品</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_header_last_time">最后更新时间 : </string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
